--- a/docker/menu_api/Dockerfile
+++ b/docker/menu_api/Dockerfile
@@ -5,8 +5,6 @@ WORKDIR /code
 COPY ./requirements.txt /code/requirements.txt
 COPY ./app/main.py /code/main.py
 
-
-
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 RUN pip install opentracing-instrumentation
@@ -14,4 +12,4 @@ RUN pip install --upgrade "setuptools>=29" "pip>=9"
 
 COPY ./app /code/app
 
-CMD ["uvicorn", "app.main:app", "--host", "localhost", "--port", "5001"]
+CMD ["uvicorn", "app.main:app", "--host", "127.168.0.12", "--port", "5011"]
