--- a/docker/tests/Dockerfile
+++ b/docker/tests/Dockerfile
@@ -4,12 +4,12 @@ WORKDIR /code
 
 COPY ./requirements.txt /code/requirements.txt
 
-# COPY ./app/requests_class.py /code/requests_class.py
-# COPY ./app/tests_menu_api.py /code/tests_menu_api.py
-# COPY ./app/consts.py /code/consts.py
-# COPY ./app/pytest.ini /code/pytest.ini
+COPY ./app/requests_class.py /code/requests_class.py
+COPY ./app/tests_menu_api.py /code/tests_menu_api.py
+COPY ./app/consts.py /code/consts.py
+COPY ./app/pytest.ini /code/pytest.ini
 
-COPY ./app/main.py /code/main.py
+# COPY ./app/main.py /code/main.py
 
 
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
@@ -19,5 +19,4 @@ RUN pip install --upgrade "setuptools>=29" "pip>=9"
 
 COPY ./app /code/app
 
-# CMD ["pytest","tests_menu_api.py"]
-CMD ["python","main.py"]
+CMD ["pytest","tests_menu_api.py"]
