--- a/docker/menu_api/Dockerfile
+++ b/docker/menu_api/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /code
 
 COPY ./requirements.txt /code/requirements.txt
 COPY ./app/main.py /code/main.py
+COPY ./app/db_requests.py /code/db_requests.py
+COPY ./app/settings.env /code/settings.env
 
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
@@ -12,4 +14,4 @@ RUN pip install --upgrade "setuptools>=29" "pip>=9"
 
 COPY ./app /code/app
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "5011"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "5433"]
